# contratos_project

./: .gitignore  app.py  pyproject.toml  routes.py
contratos_project/: app.py  models.py  routes.py
contratos_project/templates/: contrato.html  form.html
templates/: form.html
tests/: test_app.py
